--- a/book_collection.html
+++ b/book_collection.html
@@ -155,18 +155,22 @@
         <input type="text" id="searchInput" placeholder="Search books by title or author..." onkeyup="searchBooks()" />
 
         <div class="book-grid" id="bookList">
-            <!-- Book 1 -->
-            <div class="book-card" data-product-id="আমি পদ্মজা ">
-                <img src="images/আমি পদ্মজা.jpg " alt="1984" />
-                <div class="book-title">আমি পদ্মজা (হার্ড কভার)</div>
-                <div class="book-author">by ইলমা বেহরোজ</div>
-                <div class="book-price">৳ 460</div>
-                <button class="add-button">Add to Products</button>
-            </div>
+        <!-- Book 1 -->
+        <div class="book-card" data-product-id="আমি পদ্মজা">
+            <img src="https://ds.rokomari.store/rokomari110/ProductNew20190903/260X372/Ami_Poddoja-Elma_Behrouz-cbb5a-446323.jpg"
+                alt="আমি পদ্মজা" />            <!-- অথবা local image use করতে চাইলে: -->
+            <!-- <img src="images/আমি পদ্মজা.jpg" alt="আমি পদ্মজা" /> -->
+        
+            <div class="book-title">আমি পদ্মজা (হার্ড কভার)</div>
+            <div class="book-author">by ইলমা বেহরোজ</div>
+            <div class="book-price">৳ 460</div>
+            <button class="add-button">Add to Products</button>
+        </div>
 
             <!-- Book 2 -->
             <div class="book-card" data-product-id="স্পোকেন ইংলিশে জিরো ঠু হিরো">
-                <img src="images/স্পোকেন ইংলিশে জিরো ঠু হিরো.jpg" alt="" />
+                <img src="https://ds.rokomari.store/rokomari110/ProductNew20190903/260X372/Spoken_Englisha_Zero_To_Hero-Saifur_Rahman_Khan-4e358-474365.jpg"
+                    alt="আমি পদ্মজা" />
                 <div class="book-title">স্পোকেন ইংলিশে জিরো ঠু হিরো (পেপারব্যাক)</div>
                 <div class="book-author">by সাইফুর রহমান খান</div>
                 <div class="book-price">৳ 515</div>
@@ -175,7 +179,8 @@
 
             <!-- Book 3 -->
             <div class="book-card" data-product-id="ঘরে বসে Spoken English">
-                <img src="images/ঘরে বসে Spoken English.jpg" alt="" />
+                <img src="https://ds.rokomari.store/rokomari110/ProductNew20190903/260X372/d774abe23_206592.jpg"
+                    alt="আমি পদ্মজা" />
                 <div class="book-title">ঘরে বসে Spoken English(হার্ডকভার)</div>
                 <div class="book-author">by মুনজেরিন শহীদ</div>
                 <div class="book-price">৳ 298</div>
@@ -184,8 +189,9 @@
 
             <!-- Book 4 -->
             <div class="book-card" data-product-id="পাসপোর্ট টু গ্রামার">
-                <img src="images/পাসপোর্ট টু গ্রামার.jpg" alt="" />
-                <div class="book-title">এক নজরে কুরআন(হার্ডকভার)</div>
+                <img src="https://ds.rokomari.store/rokomari110/ProductNew20190903/260X372/Passport_to_Grammar_JEVABE_SIKHE_CI_BANG-Saifur_Rahman_Khan-b92bb-117676.jpg"
+                    alt="আমি পদ্মজা" />
+                <div class="book-title">পাসপোর্ট টু গ্রামার(পেপারব্যাক)</div>
                 <div class="book-author">by সাইফুর রহমান খান , মোঃ মুজিবুর রহমান , মোহাম্মাদ রাজ্জব হোসেন , মোঃ হাসীব কবীর</div>
                 <div class="book-price">৳ 315</div>
                 <button class="add-button">Add to Products</button>
@@ -193,7 +199,8 @@
 
         <!-- Book 5 -->
         <div class="book-card" data-product-id="এক নজরে কুরআন">
-            <img src="images/এক নজরে কুরআন.jpg" alt="" />
+            <img src="https://ds.rokomari.store/rokomari110/ProductNew20190903/260X372/Eak_Nozore_quran-Dr_Mizanur_Rahman_Azhari-2d298-449989.png"
+                alt="আমি পদ্মজা" />
             <div class="book-title">এক নজরে কুরআন(হার্ডকভার)</div>
             <div class="book-author">by ড. মিজানুর রহমান আজহারি</div>
             <div class="book-price">৳ 1599</div>
