--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     </section>
 
     <footer>
-        <p>© 2024 আমাদের পণ্য. সর্বস্বত্ব সংরক্ষিত।</p>
+        <p>© 2025 আমাদের পণ্য My Gmail: mdnaimurrahmanshuvo628@gmail.com</p>
     </footer>
 
     <!-- Floating Action Button Container -->
