--- a/contact_us.html
+++ b/contact_us.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
         (function () {
-            emailjs.init("Ixu7YTMqNjnR65ONh"); // আপনার EmailJS Public Key দিন এখানে
+            emailjs.init("Ixu7YTMqNjnR65ONh");
         })();
     </script>
 
@@ -131,6 +131,65 @@
         .form-message.error {
             color: red;
         }
+
+        /* টেবিল স্টাইল */
+        .order-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+
+        .order-table th,
+        .order-table td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        .order-table th {
+            background-color: #f2f2f2;
+        }
+
+        .order-table tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
+        .total-row {
+            font-weight: bold;
+            background-color: #e6f7ff !important;
+        }
+
+        /* নতুন যোগ করা স্টাইল */
+        .quantity-btn {
+            width: 25px;
+            height: 25px;
+            border: none;
+            background: #2c3e50;
+            color: white;
+            font-size: 14px;
+            border-radius: 3px;
+            cursor: pointer;
+            margin: 0 2px;
+        }
+
+        .quantity-btn:hover {
+            background: #1a252f;
+        }
+
+        .remove-btn {
+            background: #e74c3c;
+            color: white;
+            border: none;
+            padding: 3px 8px;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 14px;
+            margin-left: 5px;
+        }
+
+        .remove-btn:hover {
+            background: #c0392b;
+        }
     </style>
 </head>
 
@@ -161,8 +220,10 @@
                 <div class="email-watermark">mdnaimurrahmanshuvo628@gmail.com</div>
             </div>
 
-            <label for="message">অর্ডার/ফোন নাম্বার </label>
-            <textarea id="message" rows="5" placeholder="Your message here..."></textarea>
+            <label for="phone">ফোন নাম্বার:</label>
+            <input type="text" id="phone" required />
+
+            <div id="orderSummary"></div>
 
             <button type="submit" class="btn">আপনার অর্ডারটি সম্পূর্ণ করুন</button>
         </form>
@@ -176,6 +237,7 @@
             const formMessage = document.getElementById("formMessage");
             const emailInput = document.getElementById("email");
             const emailWatermark = document.querySelector(".email-watermark");
+            const orderSummaryDiv = document.getElementById("orderSummary");
 
             // Show/hide watermark based on input
             emailInput.addEventListener("input", function () {
@@ -192,62 +254,210 @@
                 emailWatermark.style.display = "none";
             }
 
-            // লোকালস্টোরেজ থেকে সব প্রোডাক্টের অর্ডার তথ্য সংগ্রহ
-            let orderSummary = "";
-            let hasOrders = false;
+            // লোকালস্টোরেজ থেকে অর্ডার তথ্য সংগ্রহ করে টেবিল তৈরি
+            function generateOrderTable() {
+                let orders = [];
+                let totalPrice = 0;
 
-            for (let i = 0; i < localStorage.length; i++) {
-                const key = localStorage.key(i);
-                if (key.startsWith("product_")) {
-                    const count = localStorage.getItem(key);
-                    const productId = key.replace("product_", "");
-                    // productId কে সুন্দর টেক্সটে রূপান্তর
-                    let productName = productId.replace(/_/g, " ");
-                    productName = productName.charAt(0).toUpperCase() + productName.slice(1);
+                for (let i = 0; i < localStorage.length; i++) {
+                    const key = localStorage.key(i);
+                    if (key.startsWith("product_")) {
+                        const productId = key.replace("product_", "");
+                        const count = parseInt(localStorage.getItem(key));
+                        const price = parseInt(localStorage.getItem("price_" + productId)) || 0;
+                        const subtotal = count * price;
+                        totalPrice += subtotal;
 
-                    orderSummary += `${productName} থেকে ${count} টি অর্ডার দিয়েছেন।\n`;
-                    hasOrders = true;
+                        orders.push({
+                            name: productId.replace(/_/g, " "),
+                            quantity: count,
+                            price: price,
+                            subtotal: subtotal,
+                            id: productId
+                        });
+                    }
+                }
+
+                if (orders.length > 0) {
+                    let tableHTML = `
+                        <table class="order-table">
+                            <thead>
+                                <tr>
+                                    <th>ক্রমিক নং</th>
+                                    <th>পণ্যের নাম</th>
+                                    <th>পরিমাণ</th>
+                                    <th>দর (৳)</th>
+                                    <th>মোট (৳)</th>
+                                    <th>কার্যক্রম</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                    `;
+
+                    orders.forEach((order, index) => {
+                        tableHTML += `
+                            <tr>
+                                <td>${index + 1}</td>
+                                <td>${order.name}</td>
+                                <td>${order.quantity}</td>
+                                <td>${order.price}</td>
+                                <td>${order.subtotal}</td>
+                                <td>
+                                    <button class="quantity-btn minus-btn" data-id="${order.id}">-</button>
+                                    <button class="quantity-btn plus-btn" data-id="${order.id}">+</button>
+                                    <button class="remove-btn" data-id="${order.id}">Remove</button>
+                                </td>
+                            </tr>
+                        `;
+                    });
+
+                    tableHTML += `
+                            <tr class="total-row">
+                                <td colspan="4" style="text-align: right;">মোট টাকা:</td>
+                                <td>${totalPrice} ৳</td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                        </table>
+                    `;
+
+                    orderSummaryDiv.innerHTML = `<h3>আপনার অর্ডার সমূহ:</h3>` + tableHTML;
+
+                    // ইভেন্ট লিসেনার যোগ করা
+                    addEventListeners();
+                } else {
+                    orderSummaryDiv.innerHTML = "<p>আপনি এখনও কোন প্রোডাক্ট অর্ডার দেননি।</p>";
                 }
             }
 
-            if (hasOrders) {
-                document.getElementById("message").value = orderSummary.trim();
-            } else {
-                document.getElementById("message").placeholder = "আপনি এখনও কোন প্রোডাক্ট অর্ডার দেননি।";
+            // ইভেন্ট লিসেনার যোগ করার ফাংশন
+            function addEventListeners() {
+                // প্লাস বাটন
+                document.querySelectorAll(".plus-btn").forEach(btn => {
+                    btn.addEventListener("click", function () {
+                        const productId = this.getAttribute("data-id");
+                        const currentQuantity = parseInt(localStorage.getItem("product_" + productId));
+                        localStorage.setItem("product_" + productId, currentQuantity + 1);
+                        generateOrderTable();
+                    });
+                });
+
+                // মাইনাস বাটন
+                document.querySelectorAll(".minus-btn").forEach(btn => {
+                    btn.addEventListener("click", function () {
+                        const productId = this.getAttribute("data-id");
+                        const currentQuantity = parseInt(localStorage.getItem("product_" + productId));
+
+                        if (currentQuantity > 1) {
+                            localStorage.setItem("product_" + productId, currentQuantity - 1);
+                        } else {
+                            // যদি পরিমাণ 1 হয়, তাহলে রিমুভ বাটনে ক্লিক করার মতো কাজ করবে
+                            localStorage.removeItem("product_" + productId);
+                            localStorage.removeItem("price_" + productId);
+                        }
+
+                        generateOrderTable();
+                    });
+                });
+
+                // রিমুভ বাটন
+                document.querySelectorAll(".remove-btn").forEach(btn => {
+                    btn.addEventListener("click", function () {
+                        const productId = this.getAttribute("data-id");
+                        localStorage.removeItem("product_" + productId);
+                        localStorage.removeItem("price_" + productId);
+                        generateOrderTable();
+                    });
+                });
             }
+
+            // পেজ লোড হওয়ার সময় টেবিল জেনারেট করুন
+            generateOrderTable();
 
             contactForm.addEventListener("submit", function (e) {
                 e.preventDefault();
 
                 const name = document.getElementById("name").value.trim();
                 const email = document.getElementById("email").value.trim();
-                const message = document.getElementById("message").value.trim();
+                const phone = document.getElementById("phone").value.trim();
+
+                // অর্ডার ডেটা সংগ্রহ
+                let orderDetails = "";
+                let totalPrice = 0;
+                let hasOrders = false;
+
+                for (let i = 0; i < localStorage.length; i++) {
+                    const key = localStorage.key(i);
+                    if (key.startsWith("product_")) {
+                        const productId = key.replace("product_", "");
+                        const count = parseInt(localStorage.getItem(key));
+                        const price = parseInt(localStorage.getItem("price_" + productId)) || 0;
+                        const subtotal = count * price;
+                        totalPrice += subtotal;
+
+                        orderDetails += `${productId.replace(/_/g, " ")} - ${count} টি (${subtotal} টাকা)\n`;
+                        hasOrders = true;
+                    }
+                }
+
+                if (!hasOrders) {
+                    formMessage.textContent = "❌ আপনি কোন প্রোডাক্ট অর্ডার দেননি।";
+                    formMessage.className = "form-message error";
+                    return;
+                }
+
+                orderDetails += `\nমোট টাকা: ${totalPrice} টাকা`;
 
                 localStorage.setItem("userName", name);
                 localStorage.setItem("userEmail", email);
 
+                const message = `
+                    নাম: ${name}
+                    ইমেইল: ${email}
+                    ফোন: ${phone}
+                    
+                    অর্ডার বিবরণ:
+                    ${orderDetails}
+                `;
+
+                // Send email to customer
                 emailjs.send("service_sy9tfom", "template_yof6ggh", {
                     from_name: name,
                     from_email: email,
                     message: message
                 }).then(function () {
-                    formMessage.textContent = `✅ ধন্যবাদ ${name}! আপনার মেসেজ পাঠানো হয়েছে।`;
+                    console.log("Customer email sent");
+                }, function (error) {
+                    console.error("Customer email error:", error);
+                });
+
+                // Send email to admin (you)
+                emailjs.send("service_sy9tfom", "template_yof6ggh", {
+                    from_name: name,
+                    from_email: email,
+                    message: message,
+                    to_email: "mdnaimurrahmanshuvo628@gmail.com"  // Your email address
+                }).then(function () {
+                    formMessage.textContent = `✅ ধন্যবাদ ${name}! আপনার অর্ডারটি পেয়েছি। শীঘ্রই আপনার সাথে যোগাযোগ করা হবে।`;
                     formMessage.className = "form-message success";
                     contactForm.reset();
                     emailWatermark.style.display = "block";
 
-                    // অর্ডার ডেটা পাঠানোর পর লোকালস্টোরেজ থেকে ডিলিট করা
+                    // লোকালস্টোরেজ ক্লিয়ার (শুধু অর্ডার আইটেম)
                     const keysToRemove = [];
                     for (let i = 0; i < localStorage.length; i++) {
                         const key = localStorage.key(i);
-                        if (key.startsWith("product_")) {
+                        if (key.startsWith("product_") || key.startsWith("price_")) {
                             keysToRemove.push(key);
                         }
                     }
                     keysToRemove.forEach(k => localStorage.removeItem(k));
+
+                    // টেবিল রিফ্রেশ
+                    generateOrderTable();
                 }, function (error) {
                     console.error("EmailJS error:", error);
-                    formMessage.textContent = "❌ মেসেজ পাঠাতে সমস্যা হয়েছে। আবার চেষ্টা করুন।";
+                    formMessage.textContent = "❌ অর্ডার পাঠাতে সমস্যা হয়েছে। আবার চেষ্টা করুন।";
                     formMessage.className = "form-message error";
                 });
             });
