--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
     </section>
 
     <footer>
-        <p>© 2025 আমাদের পণ্য My Gmail: mdnaimurrahmanshuvo628@gmail.com</p>
+        <p>© 2024 আমাদের পণ্য. সর্বস্বত্ব সংরক্ষিত।</p>
     </footer>
 
     <!-- Floating Action Button Container -->
@@ -374,7 +374,7 @@
         <button class="fab-btn" id="fabToggle" title="Contact Us">+</button>
 
         <div class="fab-menu" id="fabMenu">
-            <a href="https://wa.me/+8801968097505" target="_blank" rel="noopener" title="WhatsApp">
+            <a href="https://wa.me/+880 1968097505" target="_blank" rel="noopener" title="WhatsApp">
                 <span class="icon" style="color:#25D366;">&#x2709;</span> WhatsApp
             </a>
             <a href="tel:+8801339522248" title="Call Us">
