--- a/contact_us.html
+++ b/contact_us.html
@@ -474,9 +474,9 @@ ${address.split('\n').length > 1 ? `      ${address.split('\n')[1].padEnd(29)}` 
 
 **************** অর্ডার বিবরণ ****************
 ${formattedOrderDetails}
-
-**************** মোট টাকা ****************
-মোট টাকা: ${totalPrice.toString().padEnd(30)} টাকা
+*********************************************
+                                                                মোট টাকা: ${totalPrice.toString().padEnd(30)} 
+ 
 `;
 
                 // ডাউনলোড বা শেয়ার করার অপশন
